--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,15 @@ edition = "2021"
 ab_glyph = "0.2.29"
 anyhow = "1.0.97"
 clap = { version = "4.5.32", features = ["derive", "cargo"] }
+clap-verbosity-flag = "3.0.2"
+dirs = "6.0.0"
+env_logger = "0.11.7"
+fontdb = "0.23.0"
 image = "0.25.5"
 imageproc = "0.25.0"
+log = { version = "0.4.26", features = ["serde"] }
+serde = { version = "1.0.219", features = ["derive"] }
 syntect = "5.2.0"
+thiserror = "2.0.12"
+toml = "0.8.20"
+yazi-prebuild = { version = "0.1.2", features = ["build_deps"] }
