--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ edition = "2021"
 ab_glyph = "0.2.29"
 anyhow = "1.0.97"
 clap = { version = "4.5.32", features = ["derive", "cargo"] }
+dirs = "6.0.0"
 image = "0.25.5"
 imageproc = "0.25.0"
+serde = { version = "1.0.219", features = ["derive"] }
 syntect = "5.2.0"
+toml = "0.8.20"
